feat: auth-service+parking-service backend and frontend